--- a/docs/theme.css
+++ b/docs/theme.css
@@ -62,6 +62,10 @@ d-appendix {
 /*-- WEBSITE HEADER + FOOTER --*/
 /* These properties only apply to Distill sites and blogs  */
 
+d-title {
+    display: none;
+  }
+  
 .distill-site-header {
   --title-size:       18px;
   --text-color:       rgba(255, 255, 255, 0.8);
